<resources>
    <string name="app_name">BobFilm.club</string>
    <string name="app_version">1.0.0.0</string>
    <string name="host_name">bobfilm.club</string>
    <string name="host_www_name">www.bobfilm.club</string>
    <string name="site_url">http://www.bobfilm.club</string>
    <string name="check_site_available">БобФильм</string>
    <string name="jsoup_user_agent">Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36 OPR/43.0.2442.991</string>
    <string name="app_update_url">https://drive.google.com/uc?export=download&amp;id=0B4zAUBCH3sS6aWt4NEtxVWFGX1k</string>
    <string name="toolbar_btn_home_descr">На главную</string>
    <string name="parser_films_responds_mask">нений</string>
    <string name="parser_films_responds2">мнений:</string>
    <string name="parser_films_responds">Мнений:</string>
    <string name="parser_films_articles_mask">татей</string>
    <string name="parser_films_articles2">статей:</string>
    <string name="parser_films_articles">Статей:</string>
    <string name="activity_splash_title">Старт</string>
    <string name="activity_archive_title">Загрузки</string>
    <string name="activity_film_details_title">Описание</string>
    <string name="details_btn_bookmark_text">В закладки</string>
    <string name="details_btn_bookmark_descr">Закладки</string>
    <string name="activity_donate_title">Поддержать проект</string>
    <string name="activity_settings_title">Настройки</string>
    <string name="activity_directory_chooser_title">Выбор папки</string>
    <string name="activity_search_results_title">Результаты поиска</string>
    <string name="activity_search_hint">Введите строку поиска..</string>
    <string name="activity_comments_title">Комментарии</string>
    <string name="activity_subcategories_title">Статьи</string>
    <string name="progress_already_download">Загружено:</string>
    <string name="progress_already_download_from">из</string>
    <string name="download_init">Инициализация загрузки</string>
    <string name="notice_download_start">Скачивание началось</string>
    <string name="notice_download_complete">Скачивание завершено</string>
    <string name="notice_download_pause">Скачивание приостановлено</string>
    <string name="notice_download_canceled">Скачивание отменено</string>
    <string name="notice_download_failed">Ошибка скачивания</string>
    <string name="download_connecting">Соединение</string>
    <string name="download_connected">Соединен</string>
    <string name="download_downloading">Скачивание</string>
    <string name="download_complete">Скачивание завершено</string>
    <string name="download_pause">Скачивание приостановлено</string>
    <string name="download_canceled">Скачивание отменено</string>
    <string name="download_failed">Ошибка скачивания</string>
    <string name="text_download_failed">ошибка</string>
    <string name="dialog_btn_cancel">Отмена</string>
    <string name="dialog_btn_confirm">Подтвердить</string>
    <string name="selected_folder_label">Выбрать папку:</string>
    <string name="create_folder_label">Создать папку</string>
    <string name="create_folder_msg">Создать новую папку с именем "%1$s"?</string>
    <string name="create_folder_success">Создать новую папку</string>
    <string name="create_folder_error_no_write_access">Нельзя записать в эту папку</string>
    <string name="create_folder_error_already_exists">Папка уже существует</string>
    <string name="create_folder_error">Невозможно создать папку</string>
    <string name="up_label">Вверх</string>
    <string name="dialog_choose_app">Выбор приложения:</string>
    <string name="dialog_pb_title">Обработка данных..</string>
    <string name="dialog_app_exit_text">Вы уверены что хотите выйти из приложения?</string>
    <string name="dialog_btn_yes">Да</string>
    <string name="dialog_btn_no">Нет</string>
    <string name="dialog_header_information">Информация:</string>
    <string name="dialog_btn_ok">Ок</string>
    <string name="dialog_no_downloads">Закачек не найдено.</string>
    <string name="dialog_no_bookmarks">Закладок не найдено.</string>
    <string name="dialog_no_history">История не найдена.</string>
    <string name="msg_connection_failed">Упс… Нет соединения с сайтом.\nПроверьте подключение к интернету и попробуйте еще раз.</string>
    <string name="dialog_btn_repeat">Повторить</string>
    <string name="dialog_btn_exit">Выйти</string>
    <string name="dialog_btn_later">Позже</string>
    <string name="message_under_construction">В разработке…</string>
    <string name="msg_change_language">Для завершения смены языка необходимо перезапустить приложение.</string>
    <string name="delete_item">удалить выделенные элементы</string>
    <string name="selected_count">выделено: %1$s</string>
    <string name="action_send_to">поделиться информацией о фильме</string>
    <string name="no_reviews">нет</string>
    <string name="msg_no_reviews">комментариев пока нет</string>
    <string name="search_hint">Поиск в \"%1$s\"</string>
    <string name="msg_pb_dialog">Обработка данных..</string>
    <string name="msg_no_history">Истории нет</string>
    <string name="msg_no_bookmarks">Закладок нет</string>
    <string name="msg_no_downloads">Нет файлов</string>
    <string name="msg_nothing_found">Ничего не найдено</string>
    <string name="popup_add_bookmark">Добавить в закладки</string>
    <string name="popup_share">Поделиться</string>
    <string name="delete_from_downloads">Удалить из списка</string>
    <string name="delete_files">Удалить с файлом</string>
    <string name="menu_play_light">облегченная версия</string>
    <string name="menu_play_normal">обычная версия</string>
    <string name="err_layout_text">Ошибка обработки данных…</string>
    <string name="msg_download_file_does_not_exist">Нет файла!</string>
    <string name="msg_download_file_downloaded_now">Файл еще загружается..</string>
    <string name="msg_trial_over">Пробный период закончен :(</string>
    <string name="msg_update_available">Доступна новая версия приложения</string>
    <string name="pref_category_title">Общие</string>
    <string name="activity_setting_group_general">Общие</string>
    <string name="activity_setting_group_other">Другое</string>
    <string name="activity_setting_bypass_blocked_title">Обход блокировок ex.ua</string>
    <string name="activity_setting_bypass_blocked_descr">в разработке</string>
    <string name="activity_setting_app_update">Обновление программы</string>
    <string name="activity_setting_about_descr">Помощь, обсуждения, детали</string>
    <string name="activity_setting_clear_history">Очистить историю просмотров</string>
    <string name="activity_setting_about">О программе</string>
    <string name="activity_setting_choose_language">Язык программы</string>
    <string name="activity_setting_disable_ads">Отключить рекламу</string>
    <string name="activity_setting_license_agreement">Лицензионное соглашение</string>
    <string name="activity_setting_downloads_path">Папка для загрузок</string>
    <string name="dialog_btn_update">Обновить</string>
</resources>